--- a/package.json
+++ b/package.json
@@ -66,10 +66,10 @@
     "prettier": "^1.15.3"
   },
   "keywords": [
-    "justin formentin",
-    "personal blog",
-    "tutorial",
-    "gatsby",
-    "emotion"
+    "report malpractice",
+    "medical malpractice",
+    "doctor discipline",
+    "doctor report",
+    "medical malpractice"
   ]
 }
